fix spacing

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
 
 
 .page {
-    padding: 0;
+    margin: 0;
     background-color: var(--custom-black);
     color: var(--cutom-light);
 
@@ -31,7 +31,8 @@
     flex-direction: column;
     justify-content: space-between;
 
-    padding: 21px 10px;
+    box-sizing: border-box;
+    padding: 5px 10px;
 }
 
 
